test/unittest/error/tst.DTRACEFLT_UNKNOWN.r
The arguments are 1 1 PC 1 64
The value of arg4 = 0

-- @@stderr --
dtrace: error in dt_clause_1 for probe ID 1 (dtrace:::BEGIN): invalid address ({ptr}) at BPF pc NNN
